@@ -1,3 +1,7 @@
+1999-11-01  Gavin Romig-Koch  <gavin@cygnus.com>
+
+	* mips.h (OPCODE_IS_MEMBER): New.
+
 1999-10-29  Nick Clifton  <nickc@cygnus.com>
 
 	* d30v.h (SHORT_AR): Define.
