@@ -1,3 +1,7 @@
+1999-11-01  Gavin Romig-Koch  <gavin@cygnus.com>
+
+	* mips-dis.c (_print_insn_mips): Use OPCODE_IS_MEMBER.
+
 1999-10-29  Nick Clifton  <nickc@cygnus.com>
 
 	* d30v-opc.c (mvtacc): Use format SHORT_AR not SHORT_AA
